--- a/index.html
+++ b/index.html
@@ -6,32 +6,39 @@
 </head>
 <body>
 <div class="wrapper">
-  <div class="row">
-    <div class="block"></div>
-    <div class="block"></div>
-    <div class="block"></div>
-    <div class="block"></div>
-  </div>
-  <div class="row">
-    <div class="block"></div>
-    <div class="block"></div>
-    <div class="block"></div>
-    <div class="block"></div>
-  </div>
-  <div class="row">
-    <div class="block"></div>
-    <div class="block"></div>
-    <div class="block"></div>
-    <div class="block"></div>
-  </div>
-  <div class="row">
-    <div class="block"></div>
-    <div class="block"></div>
-    <div class="block"></div>
-    <div class="block"></div>
-  </div>
+    <div class="row">
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+    </div>
+    <div class="row">
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+    </div>
+    <div class="row">
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+    </div>
+    <div class="row">
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+    </div>
+
 </div>
-<div class="remove block">
+
+<div class="remove block" onclick="removeCol()">
+  <span class="minus"></span>
 </div>
+<div class="add block" onclick="addCol()">
+  <span class="plus"></span>
+</div>
+<script src="./main.js"></script>
 </body>
 </html>
