col/row add functions added

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div id="add-col" class="add block" onclick="add(false)">
       <span class="plus"></span>
     </div>
-     <div id="rem-row" class="remove block" onclick="remove(true)">
+     <div id="rem-row" class="remove block hidden" onclick="remove(true)">
      <span class="minus"></span>
     </div>
-    <div id="rem-col" class="remove block" onclick="remove(false)">
+    <div id="rem-col" class="remove block hidden" onclick="remove(false)">
       <span class="minus"></span>
     </div>
   <div class="row">
