--- a/index.html
+++ b/index.html
@@ -5,18 +5,15 @@
 <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-<div class="wrapper">
-    <div id="add-row" class="add block" onclick="add(true)">
-        <span class="plus"></span>
+<div class="task-table">
+<div class="task-table__box">
+    <div class="add-row add block plus" onclick="add(true)">
     </div>
-    <div id="add-col" class="add block" onclick="add(false)">
-      <span class="plus"></span>
+    <div class="add-col add block plus" onclick="add(false)">
     </div>
-     <div id="rem-row" class="remove block hidden" onclick="remove(false)">
-     <span class="minus"></span>
+     <div class="rem-row remove block hidden minus" onclick="remove(false)">
     </div>
-    <div id="rem-col" class="remove block hidden" onclick="remove(true)">
-      <span class="minus"></span>
+    <div  class="rem-col remove block hidden minus" onclick="remove(true)">
     </div>
   <div class="row">
       <div class="block"></div>
@@ -45,8 +42,7 @@
     </div>
 
 </div>
-
-
+</div>
 <script src="./main.js"></script>
 </body>
 </html>
