--- a/custom-comp/custom-comp.html
+++ b/custom-comp/custom-comp.html
@@ -1,24 +1,25 @@
 <template>
     <style>
-        .comp-table{
-            position:relative;
+        .comp-table {
+            position: relative;
             display: inline-block;
-            margin:60px;
+            margin: 60px;
         }
-        .comp-table-body{
+
+        .comp-table-body {
             border: 1px #4dabe4 solid;
             padding: 1px;
 
 
         }
 
-        .row{
+        .row {
 
             display: flex;
 
         }
 
-        .block{
+        .block {
 
             margin: 1px;
             height: 50px;
@@ -26,46 +27,52 @@
             background-color: #4dabe4;
 
         }
-        .block span{
+
+        .block span {
 
             display: block;
-            margin:40px auto;
+            margin: 40px auto;
             height: 20px;
-            width:20px;
-            background-repeat:no-repeat;
+            width: 20px;
+            background-repeat: no-repeat;
         }
 
-        .remove{
+        .remove {
             position: absolute;
             background-color: #b00100;
         }
 
-        .remove:hover{
+        .remove:hover {
             background-color: #c84d4c;
             visibility: visible;
             opacity: 1;
         }
 
-        .add{
+        .add {
             position: absolute;
-            background-color:  #f1a417;
+            background-color: #f1a417;
         }
-        .add:hover{
+
+        .add:hover {
 
             background-color: #f5bf5c;
         }
-        .remove,.add{
+
+        .remove,
+        .add {
             cursor: pointer;
-            transition: opacity 1s ease,visibility 1s ease,background 1s ease;
+            transition: opacity 1s ease, visibility 1s ease, background 1s ease;
         }
-        .remove{
+
+        .remove {
             background-image: url(./custom-comp/img/minus.svg);
             background-position: center;
             background-repeat: no-repeat;
             -webkit-background-size: 10px;
             background-size: 10px;
         }
-        .plus{
+
+        .plus {
             background-image: url(./custom-comp/img/plus.svg);
             background-position: center;
             background-repeat: no-repeat;
@@ -73,209 +80,41 @@
             background-size: 10px;
         }
 
-        .add-col{
-            top:2px;
-            right:-53px;
+        .add-col {
+            top: 2px;
+            right: -53px;
         }
-        .add-row{
-            left:2px;
+
+        .add-row {
+            left: 2px;
             bottom: -53px;
         }
-        .rem-col{
+
+        .rem-col {
             top: -53px;
         }
-        .rem-row{
+
+        .rem-row {
 
             left: -53px;
         }
-        .hidden{
+
+        .hidden {
             visibility: hidden;
             opacity: 0;
         }
     </style>
-    <div class="comp-table"><div class="add-row add block plus" >
-    </div>
+    <div class="comp-table">
+        <div class="add-row add block plus">
+        </div>
         <div class="add-col add block plus">
         </div>
         <div class="rem-row remove block hidden minus">
         </div>
-        <div  class="rem-col remove block hidden minus">
+        <div class="rem-col remove block hidden minus">
         </div>
-        <div class="comp-table-body"></div>
+        <div class="comp-table-body"><div class="row"><div class="block"></div></div></div>
     </div>
 </template>
 
-<script>
-
-const template = document.currentScript.ownerDocument.querySelector('template').content;
-const blockTpl = document.currentScript.ownerDocument.createElement('div');
-blockTpl.className = 'block';
-const rowTpl = blockTpl.cloneNode();
-rowTpl.className = 'row';
-
-
-class MyComp extends HTMLElement{
-
-
-    set cols(v){this.setAttribute('cols',v);}
-    set rows(v){this.setAttribute('rows',v);}
-    get cols(){return this.getAttribute('cols')?this.getAttribute('cols'):1;}
-    get rows(){return this.getAttribute('rows')?this.getAttribute('rows'):1;}
-    get rowRemove(){return this.shadowRoot.querySelector('.rem-row');}
-    get colRemove(){return this.shadowRoot.querySelector('.rem-col');}
-    get colAdd(){return this.shadowRoot.querySelector('.add-col');}
-    get rowAdd(){return this.shadowRoot.querySelector('.add-row');}
-    get tableBody(){return this.shadowRoot.querySelector('.comp-table-body');}
-
-    constructor(){
-        super();
-        this.attachShadow({mode:'open'});
-    }
-
-    redraw(){
-        this.shadowRoot.querySelectorAll('.row').forEach(x=> x.remove());
-        for(let i = 0; i < this.rows; i++){
-            this.tableBody.appendChild(rowTpl.cloneNode());
-            for(let j = 0; j < this.cols; j++){
-               let tmp = this.shadowRoot.querySelectorAll('.row')[i];
-                tmp.appendChild(blockTpl.cloneNode());
-
-                this.addEventListeners(tmp.lastElementChild,
-                    {event:'mouseover',fnc:(e)=>{
-                        let currentX,currentY;
-                      this.tableBody.childNodes.forEach((item,i)=>{
-                           if(e.target.parentNode === item)
-                               currentY = i;
-                       });
-
-                        e.target.parentNode.childNodes.forEach((item,i)=>{
-                            if(item === e.target){
-                                currentX = i;
-                            }
-                        });
-                        this.rowRemove.style.top = `${e.target.offsetTop}px`;
-                        this.colRemove.style.left = `${e.target.offsetLeft}px`;
-                        this.rowRemove.setAttribute('target',currentY);
-                        this.colRemove.setAttribute('target',currentX);
-                    }},
-                    {event:'mouseout',fnc:(e)=>{
-
-                    }});
-            }
-        }
-    }
-    addEventListeners(obj,...arr)
-    {
-        arr.forEach(arr=>{
-            obj.addEventListener(arr.event,arr.fnc);
-        });
-
-    }
-
-    connectedCallback(){
-
-        this.shadowRoot.appendChild(document.importNode(template,true))
-        this.redraw();
-        this.addEventListeners(this.tableBody, {
-                event:'mouseover',
-                fnc:(e)=>{
-                    if(this.tableBody.contains(e.relatedTarget) === false){
-                    if(this.rows > 1) {
-                        this.rowRemove.classList.toggle('hidden');
-                        this.rowRemove.style.display = 'block';
-                    }
-                    if(this.cols > 1) {
-                        this.colRemove.classList.toggle('hidden');
-                        this.colRemove.style.display = 'block';
-                    }
-
-                    }
-                }
-            },
-
-            {
-                event:'mouseout',
-                fnc:(e)=>{
-                    if(this.tableBody.contains(e.relatedTarget) === false){
-                    setTimeout(()=> {
-                        if (this.rows > 1) this.rowRemove.classList.toggle('hidden');
-                        if (this.cols > 1) this.colRemove.classList.toggle('hidden');
-                },500);
-                    }}
-            });
-
-        this.colRemove.addEventListener('click',()=>{
-            this.colRemove.style.display = 'none';
-            let target = this.colRemove.getAttribute('target');
-           this.tableBody.querySelectorAll('.row').forEach(x=>x.children[target].remove());
-            this.cols--;
-        });
-
-        this.rowRemove.addEventListener('click',()=>{
-            this.rowRemove.style.display = 'none';
-            let target = this.rowRemove.getAttribute('target');
-            this.tableBody.querySelectorAll('.row')[target].remove();
-            this.rows--;
-        });
-
-        this.colAdd.addEventListener('click',()=>{
-            this.tableBody.querySelectorAll('.row').forEach(x=>{
-              let prepBlock = blockTpl.cloneNode();
-                this.addEventListeners(prepBlock,
-                    {
-                        event:'mouseover', fnc:(e)=>{
-                        let currentX,currentY;
-                        this.tableBody.childNodes.forEach((item,i)=>{
-                            if(e.target.parentNode === item)
-                                currentY = i;
-                        });
-
-                        e.target.parentNode.childNodes.forEach((item,i)=>{
-                            if(item === e.target){
-                                currentX = i;
-                            }
-                        });
-                        this.rowRemove.style.top = `${e.target.offsetTop}px`;
-                        this.colRemove.style.left = `${e.target.offsetLeft}px`;
-                        this.rowRemove.setAttribute('target',currentY);
-                        this.colRemove.setAttribute('target',currentX);
-
-                    }});
-                x.appendChild(prepBlock);
-            });
-            this.cols++;
-        });
-
-        this.rowAdd.addEventListener('click',()=>{
-            let rowTmp = this.tableBody.querySelector('.row').cloneNode(true);
-
-            rowTmp.childNodes.forEach((x)=>{
-                x.addEventListener('mouseover',(e)=>{
-                        let currentX,currentY;
-                        this.tableBody.childNodes.forEach((item,i)=>{
-                            if(e.target.parentNode === item)
-                                currentY = i;
-                        })
-
-                        e.target.parentNode.childNodes.forEach((item,i)=>{
-                            if(item === e.target){
-                                currentX = i;
-                            }
-                        });
-                        this.rowRemove.style.top = `${e.target.offsetTop}px`;
-                        this.colRemove.style.left = `${e.target.offsetLeft}px`;
-                        this.rowRemove.setAttribute('target',currentY);
-                        this.colRemove.setAttribute('target',currentX);
-
-                    })});
-            this.tableBody.appendChild(rowTmp);
-            this.rows++;
-            });
-
-
-
-
-    }
-}
-customElements.define('custom-comp',MyComp)
-</script>
+<script src="./js/comp.js"></script>
