--- a/index.html
+++ b/index.html
@@ -1,15 +1,44 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Task</title>
-    <link rel="stylesheet" href="main.css">
-    <link rel="import" href="./custom-comp/custom-comp.html">
-</head>
-<body>
-<div class="task-table">
-    <custom-comp cols="4" rows="4"></custom-comp>
-    <custom-comp cols="4" rows="4"></custom-comp>
 
-</div>
+<head>
+    <title>Task</title>
+    <link rel="stylesheet" href="comp-table.css">
+</head>
+
+<body>
+    <div class="task-table">
+        <div class="comp-table" id="comp-table0">
+            <div class="comp-table__block comp-table__button comp-table__button--add comp-table__button--add-col">
+            </div>
+            <div class="comp-table__block comp-table__button comp-table__button--add comp-table__button--add-row">
+            </div>
+            <div class="comp-table__block comp-table__button comp-table__button--remove comp-table__button--rem-col comp-table__button--hidden">
+            </div>
+            <div class="comp-table__block comp-table__button comp-table__button--remove comp-table__button--rem-row comp-table__button--hidden">
+            </div>
+            <div class="comp-table__body"></div>
+            <template>
+                <div class="comp-table__row">
+                    <div class="comp-table__block"></div>
+                </div>
+            </template>
+        </div>
+
+        <div class="comp-table" id="comp-table1">
+            <div class="comp-table__block comp-table__button comp-table__button--add comp-table__button--add-col">
+            </div>
+            <div class="comp-table__block comp-table__button comp-table__button--add comp-table__button--add-row">
+            </div>
+            <div class="comp-table__block comp-table__button comp-table__button--remove comp-table__button--rem-col comp-table__button--hidden">
+            </div>
+            <div class="comp-table__block comp-table__button comp-table__button--remove comp-table__button--rem-row comp-table__button--hidden">
+            </div>
+            <div class="comp-table__body"></div>
+        </div>
+    </div>
+    </div>
+    <script src="./main.js"></script>
 </body>
+
 </html>
