--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <a href="./bem">bem</a>
 <a href="./web-comp">web-comp</a>
-<a href="./react/app/buid">react</a>
+<a href="./react/app/build">react</a>
