--- a/index.html
+++ b/index.html
@@ -1,2 +1,168 @@
-<a href="./bem">bem</a>
-<a href="./web-comp">web-comp</a>
+<html lang="en" class=""><head>
+<meta charset="UTF-8">
+<title>CodePen Demo</title>
+<meta name="robots" content="noindex">
+<link rel="shortcut icon" type="image/x-icon" href="https://static.codepen.io/assets/favicon/favicon-aec34940fbc1a6e787974dcd360f2c6b63348d4b1f4e06c77743096d55480f33.ico">
+<link rel="mask-icon" type="" href="https://static.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" color="#111">
+<link rel="canonical" href="https://codepen.io/petegarvin1/pen/MWKYgda">
+<style class="INLINE_PEN_STYLESHEET_ID">
+    body {
+  margin: 0;
+  font-family: Arial;
+}
+
+#particles-js {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
+.text {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+  width: 300px;
+  top: calc(50% - 100px);
+  left: calc(50% - 150px);
+  flex-direction: column;
+}
+
+.img {
+  display: inline-block;
+  height: 100px;
+  z-index: 100;
+}
+
+
+  </style>
+<script src="https://static.codepen.io/assets/editor/iframe/iframeConsoleRunner-dc0d50e60903d6825042d06159a8d5ac69a6c0e9bcef91e3380b17617061ce0f.js"></script>
+<script src="https://static.codepen.io/assets/editor/iframe/iframeRefreshCSS-e03f509ba0a671350b4b363ff105b2eb009850f34a2b4deaadaa63ed5d970b37.js"></script>
+<script src="https://static.codepen.io/assets/editor/iframe/iframeRuntimeErrors-29f059e28a3c6d3878960591ef98b1e303c1fe1935197dae7797c017a3ca1e82.js"></script>
+</head>
+<body>
+<div class="text">
+<h1>SALO.digital</h1>
+<p>coming soon</p>
+</div>
+<div id="particles-js">
+<canvas class="particles-js-canvas-el" style="width: 100%; height: 100%;" width="1537" height="228"></canvas></div>
+<script src="https://static.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
+<script id="INLINE_PEN_JS_ID">
+    /* ---- particles.js config ---- */
+
+particlesJS("particles-js", {
+  particles: {
+    number: {
+      value: 80,
+      density: {
+        enable: true,
+        value_area: 800 } },
+
+
+    color: {
+      value: ["#2EB67D", "#ECB22E", "#E01E5B", "#36C5F0"] },
+
+    shape: {
+      type: ["circle"],
+      stroke: {
+        width: 0,
+        color: "#fff" },
+
+      polygon: {
+        nb_sides: 5 },
+
+      image: {
+        src: "https://cdn.freebiesupply.com/logos/large/2x/slack-logo-icon.png",
+        width: 100,
+        height: 100 } },
+
+
+    opacity: {
+      value: 1,
+      random: false,
+      anim: {
+        enable: false,
+        speed: 1,
+        opacity_min: 0.1,
+        sync: false } },
+
+
+    size: {
+      value: 8,
+      random: true,
+      anim: {
+        enable: false,
+        speed: 10,
+        size_min: 10,
+        sync: false } },
+
+
+    line_linked: {
+      enable: true,
+      distance: 150,
+      color: "#808080",
+      opacity: 0.4,
+      width: 1 },
+
+    move: {
+      enable: true,
+      speed: 5,
+      direction: "none",
+      random: false,
+      straight: false,
+      out_mode: "out",
+      bounce: false,
+      attract: {
+        enable: false,
+        rotateX: 600,
+        rotateY: 1200 } } },
+
+
+
+  interactivity: {
+    detect_on: "canvas",
+    events: {
+      onhover: {
+        enable: true,
+        mode: "grab" },
+
+      onclick: {
+        enable: true,
+        mode: "push" },
+
+      resize: true },
+
+    modes: {
+      grab: {
+        distance: 140,
+        line_linked: {
+          opacity: 1 } },
+
+
+      bubble: {
+        distance: 400,
+        size: 40,
+        duration: 2,
+        opacity: 8,
+        speed: 3 },
+
+      repulse: {
+        distance: 200,
+        duration: 0.4 },
+
+      push: {
+        particles_nb: 4 },
+
+      remove: {
+        particles_nb: 2 } } },
+
+
+
+  retina_detect: true });
+    //# sourceURL=pen.js
+  </script>
+
+</body></html>
